changes in template

--- a/itinerary_app/templates/home.html
+++ b/itinerary_app/templates/home.html
@@ -108,7 +108,7 @@
       <div class="row">
 
         <div class="col-lg-6 about-img">
-          <img src="{% static 'itinerary/img/about-img.jpg' %}" alt="">
+          <img src="{% static 'itinerary_app/img/backgroud.jpg' %}" alt="">
         </div>
 
         <div class="col-md-6 about-content">
@@ -193,7 +193,7 @@
       <div class="row">
         <div class="col-md-3">
           <div class="member">
-            <div class="pic"><img src="img/team-1.jpg" alt=""></div>
+            <div class="pic"><img src="{% static 'itinerary_app/img/team-1.jpg' %}" alt=""></div>
             <h4>Aarohan Thapa</h4>
             <span>Team Member</span>
             <div class="social">
@@ -207,7 +207,7 @@
 
         <div class="col-md-3">
           <div class="member">
-            <div class="pic"><img src="img/team-2.jpg" alt=""></div>
+            <div class="pic"><img src="{% static 'itinerary_app/img/team-2.jpg' %}" alt=""></div>
             <h4>Amisha Chaudhary</h4>
             <span>Team Member</span>
             <div class="social">
@@ -221,7 +221,7 @@
 
         <div class="col-md-3">
           <div class="member">
-            <div class="pic"><img src="img/team-3.jpg" alt=""></div>
+            <div class="pic"><img src="{% static 'itinerary_app/img/team-3.jpg' %}" alt=""></div>
             <h4>Krijan Prajapati</h4>
             <span>Team Member</span>
             <div class="social">
