--- a/itinerary_app/templates/home.html
+++ b/itinerary_app/templates/home.html
@@ -52,10 +52,11 @@
     <div class="hero-container">
       <div class="wow fadeIn">
         <div class="hero-logo">
-          <img class="" src="{% static 'itinerary_app/img/logo.png' %}" alt="Yatra">
+          <!-- <img class="" src="{% static 'itinerary_app/img/logo.png' %}" alt="Yatra"> -->
+          <h1 style="font-family:sans-serif; font-size: 90px;">Yatra</h1>
         </div>
 
-        <h1>Welcome to Yatra</h1>
+        <h1>Welcome to Yatra Inc.</h1>
         <h2>We provide <span class="rotating">your dream tour , fun events</span></h2>
         <div class="actions">
           <a href="{% url 'form' %}" class="btn-get-started">Get Started</a>
@@ -72,9 +73,9 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img src="{% static 'itinerary_app/img/logo.png' %}" alt="" title="" /></img></a>
+        <!-- <a href="#hero"><img src="{% static 'itinerary_app/img/logo.png' %}" alt="" title="" /></img></a> -->
         <!-- Uncomment below if you prefer to use a text image -->
-        <!--<h1><a href="#hero">Header 1</a></h1>-->
+        <h1><a href="#hero">Yatra</a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -100,7 +101,6 @@
         <div class="col-md-12">
           <h3 class="section-title">About Us</h3>
           <div class="section-title-divider"></div>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
         </div>
       </div>
     </div>
@@ -108,21 +108,20 @@
       <div class="row">
 
         <div class="col-lg-6 about-img">
-          <img src="{% static 'itinerary_app/img/backgroud.jpg' %}" alt="">
+          <img src="{% static 'itinerary_app/img/background.jpg' %}" alt="">
         </div>
 
         <div class="col-md-6 about-content">
-          <h2 class="about-title">We provide great services and ideass</h2>
+          <h2 class="about-title">PLACE WHERE YOUR DREAM TOUR COMES TRUE</h2>
           <p class="about-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-            in reprehenderit in voluptate
+            Thinking of going on a tour? 
           </p>
           <p class="about-text">
-            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-            id est laborum
+            Can't decide how to plan your tour?
+            We've all been there. We want to visit a place but can't decide where we will visit and whether it matches our interest or not.
           </p>
           <p class="about-text">
-            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt molli.
+            But Don't worry! With our Destination site, you can get your entire tour planned within just few minutes and just according to your interest.
           </p>
         </div>
       </div>
@@ -143,35 +142,15 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-desktop"></i></div>
-          <h4 class="service-title"><a href="">Lorem Ipsum</a></h4>
-          <p class="service-description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+        <div class="col-md-6 service-item">
+          <div class="service-icon"><i class="fa fa-list-alt"></i></div>
+          <h4 class="service-title"><a href="">Your Itinerary</a></h4>
+          <p class="service-description">Get your Itinerary within just few clicks</p>
         </div>
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-bar-chart"></i></div>
-          <h4 class="service-title"><a href="">Dolor Sitema</a></h4>
-          <p class="service-description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-        </div>
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-paper-plane"></i></div>
-          <h4 class="service-title"><a href="">Sed ut perspiciatis</a></h4>
-          <p class="service-description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-        </div>
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-photo"></i></div>
-          <h4 class="service-title"><a href="">Magni Dolores</a></h4>
-          <p class="service-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-        </div>
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-road"></i></div>
-          <h4 class="service-title"><a href="">Nemo Enim</a></h4>
-          <p class="service-description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-        </div>
-        <div class="col-md-4 service-item">
-          <div class="service-icon"><i class="fa fa-shopping-bag"></i></div>
-          <h4 class="service-title"><a href="">Eiusmod Tempor</a></h4>
-          <p class="service-description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+        <div class="col-md-6 service-item">
+          <div class="service-icon"><i class="fa fa-calendar"></i></div>
+          <h4 class="service-title"><a href="">Fun Events</a></h4>
+          <p class="service-description">Get any event details happening nearby </p>
         </div>
       </div>
     </div>
@@ -193,7 +172,7 @@
       <div class="row">
         <div class="col-md-3">
           <div class="member">
-            <div class="pic"><img src="{% static 'itinerary_app/img/team-1.jpg' %}" alt=""></div>
+            <div class="pic"><img src="{% static 'itinerary_app/img/team1.jpg' %}" alt=""></div>
             <h4>Aarohan Thapa</h4>
             <span>Team Member</span>
             <div class="social">
@@ -207,7 +186,7 @@
 
         <div class="col-md-3">
           <div class="member">
-            <div class="pic"><img src="{% static 'itinerary_app/img/team-2.jpg' %}" alt=""></div>
+            <div class="pic"><img src="{% static 'itinerary_app/img/team2.jpg' %}" alt=""></div>
             <h4>Amisha Chaudhary</h4>
             <span>Team Member</span>
             <div class="social">
@@ -221,7 +200,7 @@
 
         <div class="col-md-3">
           <div class="member">
-            <div class="pic"><img src="{% static 'itinerary_app/img/team-3.jpg' %}" alt=""></div>
+            <div class="pic"><img src="{% static 'itinerary_app/img/team3.jpg' %}" alt=""></div>
             <h4>Krijan Prajapati</h4>
             <span>Team Member</span>
             <div class="social">
@@ -296,7 +275,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="copyright">
-            &copy; Copyright <strong>Imperial Theme</strong>. All Rights Reserved
+            &copy; Copyright <strong>Yatra Inc</strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!--
@@ -305,7 +284,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Imperial
             -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Designed by <a href="https://bootstrapmade.com/">404</a>
           </div>
         </div>
       </div>
