--- a/static/itinerary_app/css/style.css
+++ b/static/itinerary_app/css/style.css
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   display: table;
   width: 100%;
   height: 100vh;
-  background-image: url(../img/background.jpg) top center;
+  background-image: url(../img/bg.jpg) top center;
   background-size: cover;
 }
 
@@ -529,7 +529,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Services Section
 --------------------------------*/
 #services {
-  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("../img/services-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("../img/bg.jpg") fixed center center;
   background-size: cover;
   padding: 80px 0 60px 0;
 }
