--- a/users_app/templates/logout.html
+++ b/users_app/templates/logout.html
@@ -1,9 +1,11 @@
 {% load static %}
+{% load pwa %}
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
+    {% progressive_web_app_meta %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <meta charset="utf-8">
@@ -60,6 +62,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact Us</a></li>
+          <li><a href="{% url 'login' %}">Log In</a></li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -68,13 +71,16 @@
   <!-- #header -->
 
  <!-- form content -->
-<div class="content">
-    <h2>You have logged out.</h2>
-    <small class="text-muted">
-        <a class="ml-2" href="{% url 'login' %}">Log In</a>
-    </small>
+ <section id="logout">
+     <div class="content" style="text-align:center;">
+         <h1>You have logged out.</h1>
+         <small class="text-muted">
+             <a class="ml-2" href="{% url 'login' %}">Log In</a>
+         </small>
 
-</div>
+     </div>
+ </section>
+
 
 
  <!-- #form content -->
@@ -82,7 +88,7 @@
   <!--==========================
   Footer
 ============================-->
-<footer id="footer">
+<footer id="footer" style="position:fixed; bottom: 0; width:100%;">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
