--- a/itinerary_app/templates/itinerary_app/home.html
+++ b/itinerary_app/templates/itinerary_app/home.html
@@ -1,9 +1,12 @@
 {% load static %}
 
+{% load pwa %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
+  {% progressive_web_app_meta %}
   <meta charset="utf-8">
   <title>Yatra</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -52,8 +55,9 @@
     <div class="hero-container">
       <div class="wow fadeIn">
         <div class="hero-logo">
-          <h1 style="font-size= '120px' font-family: sans-serif;">uTravel</h1>
+          <h1 style="font-size:120px; font-family: sans-serif;">uTravel</h1>
         </div>
+        <br>
 
         <h1>Welcome to uTravel Inc.</h1>
         <h2>We provide <span class="rotating">Your dream tour , Fun events</span></h2>
