--- a/itinerary_app/templates/itinerary_app/result.html
+++ b/itinerary_app/templates/itinerary_app/result.html
@@ -1,11 +1,9 @@
 {% load static %}
 {% load pwa %}
-{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    {% progressive_web_app_meta %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <meta charset="utf-8">
@@ -50,9 +48,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="{% url 'home' %}"><h1>uTravel</h1></a>
-        <!-- Uncomment below if you prefer to use a text image -->
-        <!--<h1><a href="#hero">Header 1</a></h1>-->
+        <a href="{% url 'home' %}"><h1>uTravel</h1></a
       </div>
 
       <nav id="nav-menu-container">
@@ -62,6 +58,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact Us</a></li>
+          <li><a href="{% url 'logout' %}">Log Out</a></li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -69,34 +66,41 @@
   </header>
   <!-- #header -->
 
- <!-- form content -->
+ <section>
+     <div class="card" style="width: 18rem;">
+         <img src="..." class="card-img-top" alt="...">
+         <div class="card-body">
+             <h5 class="card-title">Kathmandu Durbar Square</h5>
+             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
 
- <section id="fade">
-     <h1 style="text-align:center; margin-top:20px; font-family:sans-serif;"> LOGIN </h1>
-
-    <div class="container" style="max-width:75%; margin-top:100px;">
-        <form  method="post">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <div class="form-group">
-                <br>
-                <br>
-                <button class="btn btn-block btn-info" type="submit">Log In</button>
-            </div>
-        </form>
-
-        <small class="text-muted">
-            Don't have an account? <a class="ml-2" href="{% url 'register' %}">Register</a>
-        </small>
-
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
     </div>
+  </div>
+</div>
 
+         </div>
+     </div>
  </section>
-
-
- <!-- #form content -->
-
-
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- Required JavaScript Libraries -->
