--- a/static/itinerary_app/css/style.css
+++ b/static/itinerary_app/css/style.css
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   display: table;
   width: 100%;
   height: 100vh;
-  background-image: url(../img/bg.jpg) top center;
+  background: url(../img/bg.jpg) top center;
   background-size: cover;
 }
 
@@ -666,4 +666,17 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-align: center;
   font-size: 13px;
   color: #ccc;
+}
+
+#fade {
+    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("../img/a1.jpg") fixed center center;
+    background-size: cover;
+    padding: 40px 0 40px 0;
+    height: 800px;
+}
+
+#logout {
+    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("../img/a3.jpg") fixed center center;
+    background-size: cover;
+    height: 800px;
 }
