--- a/users_app/templates/register.html
+++ b/users_app/templates/register.html
@@ -1,9 +1,11 @@
 {% load static %}
+{% load pwa %}
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
+    {% progressive_web_app_meta %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <meta charset="utf-8">
@@ -29,6 +31,7 @@
 
   <!-- Main Stylesheet File -->
   <link href="{% static 'itinerary_app/css/style.css' %}" rel="stylesheet">
+
 
 </head>
 
@@ -68,44 +71,29 @@
   <!-- #header -->
 
  <!-- form content -->
-<div class="content">
-    <form  method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <div class="form-group">
-            <button class="btn btn-outline-info btn-block" type="submit">Sign Up</button>
-        </div>
-    </form>
+ <section id="fade">
+     <h1 style="text-align:center; font-family:sans-serif;"> REGISTER </h1>
+    <div class="container" style="max-width:75%; margin-top:50px;">
+        <form  method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <div class="form-group">
+                <button class="btn btn-block btn-info" type="submit">Sign Up</button>
+            </div>
+        </form>
 
-</div>
+        <small class="text-muted">
+            Already have an account? <a class="ml-2" href="{% url 'login' %}">Log In</a>
+        </small>
+
+    </div>
+
+</section>
+
 
 
  <!-- #form content -->
 
-  <!--==========================
-  Footer
-============================-->
-<footer id="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="copyright">
-          &copy; Copyright <strong> uTravel </strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Imperial
-          -->
-          Designed by <a href="https://bootstrapmade.com/">404</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-  <!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
